# Synapse_Engine

./: .gitignore  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
docs/: cli.md  development.md  failure_codes.md  input_schema.md  quickstart.md  reports.md  testing.md  validation_rules.md
examples/: basic_patch.yaml  disaster_response.yaml  hard_scifi_device.yaml  research_design.yaml  unstable_case.yaml
src/synapse_engine/: __init__.py  cli.py  config.py
src/synapse_engine/compiler/: annotator.py  dag_builder.py  parser.py  type_checker.py
src/synapse_engine/counterfactual/: engine.py  minimal_cause.py
src/synapse_engine/court/: archivist.py  decisions.py  judge.py  prosecutor.py
src/synapse_engine/models/: budgets.py  events.py  failures.py  graph.py  proofs.py  schema.py
src/synapse_engine/reporting/: html_reporter.py  json_exporter.py  markdown_reporter.py  yaml_exporter.py
src/synapse_engine/synthesis/: generator.py  patch_fabricator.py  ranker.py
src/synapse_engine/utils/: ids.py  io.py  logging.py  math_helpers.py
src/synapse_engine/validators/: conservation.py  constraint_kernel.py  dag_validator.py  entropy_ledger.py  lightcone.py  sensitivity.py
src/synapse_engine/visualization/: graph_plotter.py  heatmap.py
tests/: conftest.py  test_archivist.py  test_cli.py  test_counterfactual.py  test_patch_fabricator.py  test_schema_parser.py  test_scores.py  test_validators.py
